--- a/requirements.txt
+++ b/requirements.txt
@@ -9,13 +9,16 @@ coverage==4.5.1
 coveralls==1.5.1
 docopt==0.6.2
 Flask==1.0.2
+Flask-JWT-Extended==3.13.1
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 more-itertools==4.3.0
 pluggy==0.8.0
+psycopg2==2.7.5
 py==1.7.0
+PyJWT==1.6.4
 pytest==3.8.2
 pytest-cov==2.6.0
 requests==2.20.0
