--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 atomicwrites==1.2.1
 attrs==18.2.0
+Cerberus==1.2
 certifi==2018.10.15
 chardet==3.0.4
 Click==7.0
@@ -7,6 +8,7 @@ codecov==2.0.15
 colorama==0.4.0
 coverage==4.5.1
 coveralls==1.5.1
+decorator==4.3.0
 docopt==0.6.2
 Flask==1.0.2
 Flask-JWT-Extended==3.13.1
@@ -15,6 +17,7 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 more-itertools==4.3.0
+nose2==0.8.0
 pluggy==0.8.0
 psycopg2==2.7.5
 py==1.7.0
@@ -22,6 +25,8 @@ PyJWT==1.6.4
 pytest==3.8.2
 pytest-cov==2.6.0
 requests==2.20.0
+schematics==2.1.0
 six==1.11.0
 urllib3==1.24
+validators==0.12.2
 Werkzeug==0.14.1
